objects/JunoDoc__Junosign_Object_Setting__c/JunoDoc__Junosign_Object_Setting__c.object-meta.xml
<CustomObject>
    <label>Junosign Object Setting</label>
    <nameField>
        <label>JunoSign Object Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junosign Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>