objects/JunoDoc__Junosign_Object_Setting__c/fields/JunoDoc__Junodoc_Default_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Default_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Default Template</label>
    <referenceTo>JunoDoc__Doc_Template__c</referenceTo>
    <relationshipLabel>Junosign Object Settings</relationshipLabel>
    <relationshipName>Junosign_Object_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>