objects/JunoDoc__Junosign_Object_Setting__c/fields/JunoDoc__Junodoc_Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Doc_Template__c</fullName>
    <label>Junodoc Doc Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>