objects/JunoDoc__Junosign_Object_Setting__c/fields/JunoDoc__Selected_object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Selected_object__c</fullName>
    <label>Selected object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>